--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <meta property="og:title" content="인테리어 홈페이지 오픈그래피" />
     <meta
       property="og:url"
-      content="https://soohyun08.github.io/se2-git/인테리어web/"
+      content="https://soohyun08.github.io/personal-project/"
     />
     <meta
       property="og:description"
@@ -34,7 +34,7 @@
     />
     <meta
       property="og:image"
-      content="https://soohyun08.github.io/se2-git/인테리어web/images/w.png"
+      content="https://soohyun08.github.io/personal-project/public/w.png"
     />
   </head>
   <body>
