--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/w.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>인테리어 홈페이지</title>
+    <title>케이테마 인테리어 연습</title>
     <!-- 미니 리셋 -->
     <link rel="stylesheet" href="./common/minireset.min.css" />
     <!-- 구글 폰트 -->
