--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8" />
+    <!-- 파비콘 -->
     <link rel="icon" href="%PUBLIC_URL%/w.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>케이테마 인테리어 연습</title>
-    <!-- 미니 리셋 -->
-    <link rel="stylesheet" href="./common/minireset.min.css" />
     <!-- 구글 폰트 -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -20,8 +20,6 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
     />
-    <!-- 파비콘 -->
-    <link rel="shortcut icon" href="./images/w.ico" type="image/x-icon" />
     <!-- 오픈그래픽 -->
     <meta property="og:title" content="인테리어 홈페이지 오픈그래피" />
     <meta
